fixed rendering issue with js
added new div to correct ID so its hidden by JS. Also removed padding on the detail-view to stop horizontal scroll bar appearing

--- a/01/styles.css
+++ b/01/styles.css
@@ -237,7 +237,7 @@
             justify-content: center;
             width: 100%;
             text-align: center;
-            padding: 20px;
+            padding: 20px 0 20px 0;
         }
 		
         .detail-view p {
